# shop_project

./: .gitignore  db.sqlite3  pyproject.toml
shop/: models.py  permissions.py  serializers.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_alter_brand_name_alter_category_name_product_comment.py
shop/tests/: factories.py  tests_shop.py
shop_project/: settings.py  urls.py
users/: factories.py  models.py
