[tool.poetry]
name = "shop_project"
version = "0.1.0"
description = ""
authors = ["dmitriy <dirsherman8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"
SHop = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
